--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,6 +47,8 @@ services:
       - CELERY_BROKER_URL=redis://redis:6379/0
       - CELERY_RESULT_BACKEND=redis://redis:6379/1
       - DATABASE_URL=postgresql://wizetale_user:your_secure_password@postgres:5432/wizetale_db
+    volumes:
+      - static_files:/app/static
     # volumes:
     #   - ./wizetale-api:/app
 
@@ -72,6 +74,7 @@ services:
       - DATABASE_URL=postgresql://wizetale_user:your_secure_password@postgres:5432/wizetale_db
     volumes:
       - ./wizetale-api:/app
+      - static_files:/app/static
 
   # Frontend service
   frontend:
@@ -120,3 +123,4 @@ services:
 volumes:
   redis_data:
   postgres_data:
+  static_files:
