--- a/nginx.conf
+++ b/nginx.conf
@@ -6,6 +6,9 @@ events {
 
 http {
   sendfile on;
+  
+  # Add resolver for Docker DNS
+  resolver 127.0.0.11 valid=30s;
 
   upstream api {
     server api:8000;
@@ -58,6 +61,15 @@ http {
       proxy_send_timeout 600;
       proxy_read_timeout 600;
       send_timeout 600;
+    }
+
+    # Проксируем /static/ на FastAPI
+    location /static/ {
+      proxy_pass http://api:8000/static/;
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
     }
 
     location / {
