--- a/nginx.conf
+++ b/nginx.conf
@@ -11,7 +11,7 @@ http {
   resolver 127.0.0.11 valid=30s;
 
   upstream api {
-    server 172.20.0.5:8000;
+    server api;
   }
 
   upstream frontend {
