--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -102,10 +102,9 @@ services:
       - "80:80"
       - "443:443"
     volumes:
-      - ./nginx.conf:/etc/nginx/templates/nginx.conf.template
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
       - ./data/certbot/conf:/etc/letsencrypt
       - ./data/certbot/www:/var/www/certbot
-    command: /bin/sh -c "envsubst '$$API_KEY' < /etc/nginx/templates/nginx.conf.template > /etc/nginx/nginx.conf && nginx -g 'daemon off;'"
     env_file:
       - .env
     depends_on:
