--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -95,18 +95,16 @@ services:
       - api
 
   nginx:
-    image: nginx:latest
     container_name: wisetale-nginx
-    restart: always
+    build:
+      context: ./nginx
+    restart: unless-stopped
     ports:
       - "80:80"
       - "443:443"
     volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf:ro
       - ./data/certbot/conf:/etc/letsencrypt
       - ./data/certbot/www:/var/www/certbot
-    env_file:
-      - .env
     depends_on:
       - api
       - frontend
