--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,2 +1,4 @@
 FROM nginx:latest
-COPY nginx.conf /etc/nginx/conf.d/default.conf 
+COPY nginx.conf /etc/nginx/nginx.conf
+# Отключаем автоматические скрипты entrypoint'а
+RUN rm -rf /docker-entrypoint.d/20-envsubst-on-templates.sh 
