--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -51,7 +51,7 @@ http {
     add_header X-XSS-Protection "1; mode=block";
 
     location /api/ {
-      proxy_pass http://api:8000$request_uri;
+      proxy_pass http://api$request_uri;
       proxy_set_header Host $host;
       proxy_set_header X-Real-IP $remote_addr;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -65,7 +65,7 @@ http {
 
     # Проксируем /static/ на FastAPI
     location /static/ {
-      proxy_pass http://api:8000/static/;
+      proxy_pass http://api/static/;
       proxy_set_header Host $host;
       proxy_set_header X-Real-IP $remote_addr;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
