--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -102,6 +102,8 @@ services:
     ports:
       - "80:80"
       - "443:443"
+    environment:
+      - API_KEY=${API_KEY}
     volumes:
       - ./data/certbot/conf:/etc/letsencrypt
       - ./data/certbot/www:/var/www/certbot
