--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -84,7 +84,7 @@ http {
     # API endpoints with rate limiting
     location /api/ {
       limit_req zone=api burst=20 nodelay;
-      proxy_pass http://api$request_uri;
+      proxy_pass http://api/;
       proxy_set_header Host $host;
       proxy_set_header X-Real-IP $remote_addr;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
