--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -55,6 +55,60 @@ services:
     # volumes:
     #   - ./wizetale-api:/app
 
+  # Second API service for load balancing
+  api2:
+    build:
+      context: ./wizetale-api
+      dockerfile: Dockerfile
+    image: wizetale-api-prod
+    container_name: wizetale-api-prod-2
+    ports:
+      - "8002:8000"
+    depends_on:
+      - redis
+      - postgres
+    restart: unless-stopped
+    env_file:
+      - .env
+    environment:
+      - RUNWARE_API_KEY=Tr78HtnWmM1OtFhMROf9MQJBViFHcYgY
+      - REDIS_URL=redis://redis:6379/0
+      - CELERY_BROKER_URL=redis://redis:6379/0
+      - CELERY_RESULT_BACKEND=redis://redis:6379/1
+      - DATABASE_URL=postgresql://wizetale_user:your_secure_password@postgres:5432/wizetale_db
+    volumes:
+      - static_files:/app/static
+      - ./wizetale-api/generated_audio:/app/generated_audio
+      - ./wizetale-api/generated_images:/app/generated_images
+      - ./wizetale-api/generated_videos:/app/generated_videos
+
+  # Third API service for additional load balancing
+  api3:
+    build:
+      context: ./wizetale-api
+      dockerfile: Dockerfile
+    image: wizetale-api-prod
+    container_name: wizetale-api-prod-3
+    ports:
+      - "8003:8000"
+    depends_on:
+      - redis
+      - postgres
+    restart: unless-stopped
+    env_file:
+      - .env
+    environment:
+      - RUNWARE_API_KEY=Tr78HtnWmM1OtFhMROf9MQJBViFHcYgY
+      - REDIS_URL=redis://redis:6379/0
+      - CELERY_BROKER_URL=redis://redis:6379/0
+      - CELERY_RESULT_BACKEND=redis://redis:6379/1
+      - DATABASE_URL=postgresql://wizetale_user:your_secure_password@postgres:5432/wizetale_db
+    volumes:
+      - static_files:/app/static
+      - ./wizetale-api/generated_audio:/app/generated_audio
+      - ./wizetale-api/generated_images:/app/generated_images
+      - ./wizetale-api/generated_videos:/app/generated_videos
+
   # Celery worker service  
   celery-worker:
     build:
@@ -63,7 +117,57 @@ services:
     image: wizetale-celery-worker
     container_name: wizetale-celery-worker
     # Используем worker.py как точку входа для Celery
-    command: celery -A worker.celery_app worker --loglevel=info
+    command: celery -A worker.celery_app worker --loglevel=info --concurrency=2
+    depends_on:
+      - redis
+      - postgres
+    restart: unless-stopped
+    env_file:
+      - .env
+    environment:
+      - REDIS_URL=redis://redis:6379/0
+      - CELERY_BROKER_URL=redis://redis:6379/0
+      - CELERY_RESULT_BACKEND=redis://redis:6379/1
+      - DATABASE_URL=postgresql://wizetale_user:your_secure_password@postgres:5432/wizetale_db
+    volumes:
+      - static_files:/app/static
+      - ./wizetale-api/generated_audio:/app/generated_audio
+      - ./wizetale-api/generated_images:/app/generated_images
+      - ./wizetale-api/generated_videos:/app/generated_videos
+
+  # Second Celery worker for increased processing capacity
+  celery-worker-2:
+    build:
+      context: ./wizetale-api
+      dockerfile: Dockerfile
+    image: wizetale-celery-worker
+    container_name: wizetale-celery-worker-2
+    command: celery -A worker.celery_app worker --loglevel=info --concurrency=2
+    depends_on:
+      - redis
+      - postgres
+    restart: unless-stopped
+    env_file:
+      - .env
+    environment:
+      - REDIS_URL=redis://redis:6379/0
+      - CELERY_BROKER_URL=redis://redis:6379/0
+      - CELERY_RESULT_BACKEND=redis://redis:6379/1
+      - DATABASE_URL=postgresql://wizetale_user:your_secure_password@postgres:5432/wizetale_db
+    volumes:
+      - static_files:/app/static
+      - ./wizetale-api/generated_audio:/app/generated_audio
+      - ./wizetale-api/generated_images:/app/generated_images
+      - ./wizetale-api/generated_videos:/app/generated_videos
+
+  # Third Celery worker for maximum processing capacity
+  celery-worker-3:
+    build:
+      context: ./wizetale-api
+      dockerfile: Dockerfile
+    image: wizetale-celery-worker
+    container_name: wizetale-celery-worker-3
+    command: celery -A worker.celery_app worker --loglevel=info --concurrency=2
     depends_on:
       - redis
       - postgres
