--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -15,6 +15,16 @@ http {
   types_hash_max_size 2048;
   client_max_body_size 100M;
   
+  # Performance optimizations
+  worker_connections 4096;
+  multi_accept on;
+  use epoll;
+  
+  # Buffer optimizations
+  client_body_buffer_size 128k;
+  client_header_buffer_size 1k;
+  large_client_header_buffers 4 4k;
+  
   # Gzip compression
   gzip on;
   gzip_vary on;
@@ -36,17 +46,22 @@ http {
   resolver 127.0.0.11 valid=30s;
 
   # Rate limiting
-  limit_req_zone $binary_remote_addr zone=api:10m rate=10r/s;
-  limit_req_zone $binary_remote_addr zone=general:10m rate=30r/s;
+  limit_req_zone $binary_remote_addr zone=api:10m rate=20r/s;
+  limit_req_zone $binary_remote_addr zone=general:10m rate=60r/s;
 
-  upstream api {
-    server api:8000;
-    keepalive 32;
+  # Upstream for API load balancing
+  upstream api_backend {
+    least_conn;  # Use least connections algorithm
+    server api:8000 max_fails=3 fail_timeout=30s weight=1;
+    server api2:8000 max_fails=3 fail_timeout=30s weight=1;
+    server api3:8000 max_fails=3 fail_timeout=30s weight=1;
+    keepalive 64;  # Increased keepalive connections
   }
 
-  upstream frontend {
+  # Upstream for frontend
+  upstream frontend_backend {
     server frontend:3000;
-    keepalive 32;
+    keepalive 64;  # Increased keepalive connections
   }
 
   server {
@@ -83,8 +98,8 @@ http {
 
     # API endpoints with rate limiting
     location /api/ {
-      limit_req zone=api burst=20 nodelay;
-      proxy_pass http://api/;
+      limit_req zone=api burst=30 nodelay;
+      proxy_pass http://api_backend/;
       proxy_set_header Host $host;
       proxy_set_header X-Real-IP $remote_addr;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -95,13 +110,15 @@ http {
       proxy_read_timeout 600;
       send_timeout 600;
       proxy_buffering on;
-      proxy_buffer_size 4k;
-      proxy_buffers 8 4k;
+      proxy_buffer_size 8k;
+      proxy_buffers 16 8k;
+      proxy_busy_buffers_size 16k;
+      proxy_temp_file_write_size 16k;
     }
 
     # Static files with caching
     location /static/ {
-      proxy_pass http://api/static/;
+      proxy_pass http://api_backend/static/;
       proxy_set_header Host $host;
       proxy_set_header X-Real-IP $remote_addr;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -112,7 +129,7 @@ http {
 
     # Generated videos with caching
     location /generated_videos/ {
-      proxy_pass http://api/generated_videos/;
+      proxy_pass http://api_backend/generated_videos/;
       proxy_set_header Host $host;
       proxy_set_header X-Real-IP $remote_addr;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -123,7 +140,7 @@ http {
 
     # Generated audio with caching
     location /generated_audio/ {
-      proxy_pass http://api/generated_audio/;
+      proxy_pass http://api_backend/generated_audio/;
       proxy_set_header Host $host;
       proxy_set_header X-Real-IP $remote_addr;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -134,7 +151,7 @@ http {
 
     # Generated images with caching
     location /generated_images/ {
-      proxy_pass http://api/generated_images/;
+      proxy_pass http://api_backend/generated_images/;
       proxy_set_header Host $host;
       proxy_set_header X-Real-IP $remote_addr;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -143,17 +160,32 @@ http {
       add_header Cache-Control "public, immutable";
     }
 
-    # Frontend with rate limiting
+    # Frontend with rate limiting and caching
     location / {
       limit_req zone=general burst=50 nodelay;
-      proxy_pass http://frontend;
+      proxy_pass http://frontend_backend;
       proxy_set_header Host $host;
       proxy_set_header X-Real-IP $remote_addr;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header X-Forwarded-Proto $scheme;
       proxy_buffering on;
-      proxy_buffer_size 4k;
-      proxy_buffers 8 4k;
+      proxy_buffer_size 8k;
+      proxy_buffers 16 8k;
+      proxy_busy_buffers_size 16k;
+      proxy_temp_file_write_size 16k;
+      
+      # Cache static assets
+      location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
+        expires 1y;
+        add_header Cache-Control "public, immutable";
+        add_header Vary Accept-Encoding;
+      }
+      
+      # Cache HTML pages for a shorter time
+      location ~* \.html$ {
+        expires 1h;
+        add_header Cache-Control "public, must-revalidate";
+      }
     }
   }
 } 
