--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -80,7 +80,8 @@ http {
   }
 
   server {
-    listen 443 ssl http2;
+    listen 443 ssl;
+    http2 on;
     server_name wizetale.com www.wizetale.com;
 
     # SSL configuration from Certbot
@@ -105,6 +106,24 @@ http {
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header X-Forwarded-Proto $scheme;
       proxy_set_header X-API-KEY ${API_KEY};
+      proxy_connect_timeout 600;
+      proxy_send_timeout 600;
+      proxy_read_timeout 600;
+      send_timeout 600;
+      proxy_buffering on;
+      proxy_buffer_size 8k;
+      proxy_buffers 16 8k;
+      proxy_busy_buffers_size 16k;
+      proxy_temp_file_write_size 16k;
+    }
+
+    # Next.js API routes
+    location /landing/api/ {
+      proxy_pass http://frontend_backend;
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
       proxy_connect_timeout 600;
       proxy_send_timeout 600;
       proxy_read_timeout 600;
