--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -97,7 +97,25 @@ http {
     add_header X-Content-Type-Options nosniff;
     add_header X-XSS-Protection "1; mode=block";
 
-    # API endpoints with rate limiting
+    # Feedback API endpoint (Next.js)
+    location /api/feedback {
+      proxy_pass http://frontend_backend;
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
+      proxy_connect_timeout 600;
+      proxy_send_timeout 600;
+      proxy_read_timeout 600;
+      send_timeout 600;
+      proxy_buffering on;
+      proxy_buffer_size 8k;
+      proxy_buffers 16 8k;
+      proxy_busy_buffers_size 16k;
+      proxy_temp_file_write_size 16k;
+    }
+
+    # Other API endpoints with rate limiting
     location /api/ {
       limit_req zone=api burst=30 nodelay;
       proxy_pass http://api_backend/;
