--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -97,13 +97,15 @@ http {
     add_header X-Content-Type-Options nosniff;
     add_header X-XSS-Protection "1; mode=block";
 
-    # Feedback API endpoint (Next.js)
-    location /api/feedback {
-      proxy_pass http://frontend_backend;
+    # Other API endpoints with rate limiting
+    location /api/ {
+      limit_req zone=api burst=30 nodelay;
+      proxy_pass http://api_backend/;
       proxy_set_header Host $host;
       proxy_set_header X-Real-IP $remote_addr;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header X-Forwarded-Proto $scheme;
+      proxy_set_header X-API-KEY ${API_KEY};
       proxy_connect_timeout 600;
       proxy_send_timeout 600;
       proxy_read_timeout 600;
@@ -115,15 +117,13 @@ http {
       proxy_temp_file_write_size 16k;
     }
 
-    # Other API endpoints with rate limiting
-    location /api/ {
-      limit_req zone=api burst=30 nodelay;
-      proxy_pass http://api_backend/;
+    # Feedback API endpoint (Next.js) - must come after /api/ to override it
+    location = /api/feedback {
+      proxy_pass http://frontend_backend;
       proxy_set_header Host $host;
       proxy_set_header X-Real-IP $remote_addr;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header X-Forwarded-Proto $scheme;
-      proxy_set_header X-API-KEY ${API_KEY};
       proxy_connect_timeout 600;
       proxy_send_timeout 600;
       proxy_read_timeout 600;
