--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -192,6 +192,18 @@ http {
       add_header Cache-Control "public, immutable";
     }
 
+    # Next.js static files with caching
+    location /_next/ {
+      proxy_pass http://frontend_backend;
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
+      expires 1y;
+      add_header Cache-Control "public, immutable";
+      add_header Vary Accept-Encoding;
+    }
+
     # Frontend with rate limiting and caching
     location / {
       limit_req zone=general burst=50 nodelay;
