--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -204,13 +204,10 @@ http {
       add_header Vary Accept-Encoding;
     }
 
-    # Static files from Next.js public folder
+    # Static files from Next.js public folder - serve directly
     location ~* ^/(favicon\.png|wisetale-logo\.png|placeholder.*\.(png|jpg|svg))$ {
-      proxy_pass http://frontend_backend/public$request_uri;
-      proxy_set_header Host $host;
-      proxy_set_header X-Real-IP $remote_addr;
-      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-      proxy_set_header X-Forwarded-Proto $scheme;
+      root /var/www/public;
+      try_files $uri =404;
       expires 1y;
       add_header Cache-Control "public, immutable";
       add_header Vary Accept-Encoding;
