--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -15,6 +15,11 @@ http {
   types_hash_max_size 2048;
   client_max_body_size 100M;
   
+  # Performance optimizations
+  worker_connections 4096;
+  multi_accept on;
+  use epoll;
+  
   # Buffer optimizations
   client_body_buffer_size 128k;
   client_header_buffer_size 1k;
@@ -92,7 +97,7 @@ http {
     add_header X-Content-Type-Options nosniff;
     add_header X-XSS-Protection "1; mode=block";
 
-    # Other API endpoints with rate limiting
+    # API endpoints with rate limiting
     location /api/ {
       limit_req zone=api burst=30 nodelay;
       proxy_pass http://api_backend/;
@@ -101,42 +106,6 @@ http {
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header X-Forwarded-Proto $scheme;
       proxy_set_header X-API-KEY ${API_KEY};
-      proxy_connect_timeout 600;
-      proxy_send_timeout 600;
-      proxy_read_timeout 600;
-      send_timeout 600;
-      proxy_buffering on;
-      proxy_buffer_size 8k;
-      proxy_buffers 16 8k;
-      proxy_busy_buffers_size 16k;
-      proxy_temp_file_write_size 16k;
-    }
-
-    # Feedback API endpoint (Next.js) - must come after /api/ to override it
-    location = /api/feedback {
-      proxy_pass http://frontend_backend;
-      proxy_set_header Host $host;
-      proxy_set_header X-Real-IP $remote_addr;
-      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-      proxy_set_header X-Forwarded-Proto $scheme;
-      proxy_connect_timeout 600;
-      proxy_send_timeout 600;
-      proxy_read_timeout 600;
-      send_timeout 600;
-      proxy_buffering on;
-      proxy_buffer_size 8k;
-      proxy_buffers 16 8k;
-      proxy_busy_buffers_size 16k;
-      proxy_temp_file_write_size 16k;
-    }
-
-    # Next.js API routes
-    location /landing/api/ {
-      proxy_pass http://frontend_backend;
-      proxy_set_header Host $host;
-      proxy_set_header X-Real-IP $remote_addr;
-      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-      proxy_set_header X-Forwarded-Proto $scheme;
       proxy_connect_timeout 600;
       proxy_send_timeout 600;
       proxy_read_timeout 600;
@@ -190,39 +159,6 @@ http {
       proxy_set_header X-Forwarded-Proto $scheme;
       expires 1y;
       add_header Cache-Control "public, immutable";
-    }
-
-    # Next.js static files with caching
-    location /_next/ {
-      proxy_pass http://frontend_backend;
-      proxy_set_header Host $host;
-      proxy_set_header X-Real-IP $remote_addr;
-      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-      proxy_set_header X-Forwarded-Proto $scheme;
-      expires 1y;
-      add_header Cache-Control "public, immutable";
-      add_header Vary Accept-Encoding;
-    }
-
-    # Static files from Next.js public folder - serve directly
-    location ~* ^/(favicon\.png|wisetale-logo\.png|placeholder.*\.(png|jpg|svg))$ {
-      root /var/www;
-      try_files /public$uri =404;
-      expires 1y;
-      add_header Cache-Control "public, immutable";
-      add_header Vary Accept-Encoding;
-    }
-
-    # Public static files (favicon, logos, etc.)
-    location ~* \.(png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot|css|js)$ {
-      proxy_pass http://frontend_backend;
-      proxy_set_header Host $host;
-      proxy_set_header X-Real-IP $remote_addr;
-      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-      proxy_set_header X-Forwarded-Proto $scheme;
-      expires 1y;
-      add_header Cache-Control "public, immutable";
-      add_header Vary Accept-Encoding;
     }
 
     # Frontend with rate limiting and caching
