--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -161,6 +161,39 @@ http {
       add_header Cache-Control "public, immutable";
     }
 
+    # Favicon and logo files
+    location = /favicon.png {
+      proxy_pass http://frontend_backend/favicon.png;
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
+      expires 1y;
+      add_header Cache-Control "public, immutable";
+    }
+
+    location = /wisetale-logo.png {
+      proxy_pass http://frontend_backend/wisetale-logo.png;
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
+      expires 1y;
+      add_header Cache-Control "public, immutable";
+    }
+
+    # Static assets with caching
+    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
+      proxy_pass http://frontend_backend;
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
+      expires 1y;
+      add_header Cache-Control "public, immutable";
+      add_header Vary Accept-Encoding;
+    }
+
     # Frontend with rate limiting and caching
     location / {
       limit_req zone=general burst=50 nodelay;
@@ -174,19 +207,6 @@ http {
       proxy_buffers 16 8k;
       proxy_busy_buffers_size 16k;
       proxy_temp_file_write_size 16k;
-      
-      # Cache static assets
-      location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
-        expires 1y;
-        add_header Cache-Control "public, immutable";
-        add_header Vary Accept-Encoding;
-      }
-      
-      # Cache HTML pages for a shorter time
-      location ~* \.html$ {
-        expires 1h;
-        add_header Cache-Control "public, must-revalidate";
-      }
     }
   }
 } 
