--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -96,7 +96,7 @@ http {
     # API endpoints with rate limiting
     location /api/ {
       limit_req zone=api burst=30 nodelay;
-      proxy_pass http://api_backend/;
+      proxy_pass http://api_backend;
       proxy_set_header Host $host;
       proxy_set_header X-Real-IP $remote_addr;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -115,7 +115,7 @@ http {
 
     # Static files with caching
     location /static/ {
-      proxy_pass http://api_backend/static/;
+      proxy_pass http://api_backend;
       proxy_set_header Host $host;
       proxy_set_header X-Real-IP $remote_addr;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -126,7 +126,7 @@ http {
 
     # Generated videos with caching
     location /generated_videos/ {
-      proxy_pass http://api_backend/generated_videos/;
+      proxy_pass http://api_backend;
       proxy_set_header Host $host;
       proxy_set_header X-Real-IP $remote_addr;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -137,7 +137,7 @@ http {
 
     # Generated audio with caching
     location /generated_audio/ {
-      proxy_pass http://api_backend/generated_audio/;
+      proxy_pass http://api_backend;
       proxy_set_header Host $host;
       proxy_set_header X-Real-IP $remote_addr;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -148,7 +148,7 @@ http {
 
     # Generated images with caching
     location /generated_images/ {
-      proxy_pass http://api_backend/generated_images/;
+      proxy_pass http://api_backend;
       proxy_set_header Host $host;
       proxy_set_header X-Real-IP $remote_addr;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
