--- a/wizetale-app/package.json
+++ b/wizetale-app/package.json
@@ -37,6 +37,7 @@
     "@radix-ui/react-toggle": "1.1.1",
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@stripe/stripe-js": "^7.5.0",
     "@tanstack/react-table": "^8.17.3",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.0",
@@ -60,6 +61,7 @@
     "react-resizable-panels": "^2.0.19",
     "recharts": "^2.12.7",
     "sonner": "^1.5.0",
+    "stripe": "^18.3.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5",
